# lots-of-smiles

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  io.rs  lib.rs  progress.rs
src/config/: credentials.rs  filters.rs  mod.rs  output.rs
src/download/: enamine.rs  mod.rs
src/filter/: mod.rs  parsed.rs  prescan.rs
src/pipeline/: mod.rs  sortdedup.rs  stage.rs  writer.rs
src/publish/: mod.rs  zenodo.rs
src/source/: enamine.rs  mod.rs  pubchem.rs  zinc20.rs
tests/: enamine_pipeline.rs  zinc20_pipeline.rs
